How I was implementing themes caused some issues, that's now been removed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".AddContactActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".AddContactActivity" />
+        <activity android:name=".SignUpActivity" />
     </application>
 
 </manifest>
