--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".AddContactActivity" />
-        <activity android:name=".SignUpActivity" />
+        <activity android:name=".SignUpActivity"></activity>
     </application>
 
 </manifest>
