--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".AddContactActivity" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".ContactActivity"></activity>
+        <activity android:name=".ContactActivity"/>
     </application>
 
 </manifest>
