Added intents to take a user to messaging and contacts on each contact page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,5 @@
         <activity android:name=".SignUpActivity" />
         <activity android:name=".ContactActivity"/>
     </application>
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 </manifest>
