Firebase notification support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -32,3 +33,6 @@ dependencies {
     annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-rc1';
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-rc1';
 }
+
+
+apply plugin: 'com.google.gms.google-services'
